--- a/openAPI/week12.ipynb
+++ b/openAPI/week12.ipynb
@@ -10,19 +10,19 @@
      "output_type": "stream",
      "text": [
       "일교차가 가장 큰 날\n",
-      "2020.5.6\n",
+      "1942.4.19 / 21.8\n",
       "\n",
       "최저기온이 가장 낮은 날\n",
-      "2020.12.30\n",
+      "1927.12.31 / -23.1\n",
       "\n",
       "최고기온이 가장 높은 날\n",
-      "2020.6.22\n"
+      "2018.8.1 / 39.6\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
-    "f = open('/Users/chungyeons/Downloads/seoul.csv', 'r', encoding='cp949')\n",
+    "f = open('/Users/chungyeons/Downloads/seoul2.csv', 'r', encoding='cp949')\n",
     "data = csv.reader(f, delimiter=',')\n",
     "header = next(data)\n",
     "minmax = ['', -999]\n",
@@ -30,12 +30,17 @@
     "min_temp = ['', 999]\n",
     "\n",
     "for row in data:\n",
-    "    if row[-1] == '':\n",
-    "        row[-1] = -999\n",
-    "    elif row[-2] == '':\n",
-    "        row[2] == 999\n",
+    "    if row[-2] == '' or row[-1] == '':\n",
+    "        if row[-2] == '' and row[-1] == '':\n",
+    "            row[-2] = 999\n",
+    "            row[-1] = -999\n",
+    "            \n",
+    "        elif row[-2] == '':\n",
+    "            row[-2] = 999\n",
+    "        else:\n",
+    "            row[-1] = -999\n",
     "        \n",
-    "    row[-2] = float(row[-2])\n",
+    "    row[-2] = float(row[-2])   \n",
     "    row[-1] = float(row[-1])\n",
     "    \n",
     "    if minmax[1] < row[-1] - row[-2]:\n",
@@ -53,13 +58,13 @@
     "        \n",
     "f.close()\n",
     "print(\"일교차가 가장 큰 날\")\n",
-    "print(minmax[0])\n",
+    "print(minmax[0],'/',minmax[1])\n",
     "print(\"\")\n",
     "print(\"최저기온이 가장 낮은 날\")\n",
-    "print(min_temp[0])\n",
+    "print(min_temp[0],'/', min_temp[1])\n",
     "print(\"\")\n",
     "print(\"최고기온이 가장 높은 날\")\n",
-    "print(max_temp[0])"
+    "print(max_temp[0],'/',max_temp[1])"
    ]
   },
   {
@@ -409,6 +414,13 @@
     "# for i in low_rank[0:3]:\n",
     "#     print('%d : ' % (low_rank.index(i) + 1) + i[0] + '( %d명 )' % i[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
