--- a/openAPI/week13.ipynb
+++ b/openAPI/week13.ipynb
@@ -19,6 +19,7 @@
     }
    ],
    "source": [
+    "# csv 파일 변환 문제로 인해 split '-' --> '.'\n",
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
     "f = open('/Users/chungyeons/Downloads/seoul2.csv', 'r', encoding='cp949')\n",
