--- a/solution.ipynb
+++ b/solution.ipynb
@@ -125,6 +125,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import matplotlib as plt\n",
     "docs = [[1,1,0,1,0,1],[1,1,1,0,1,0],[1,1,0,1,0,0]]\n",
     "query = [1,1,0,1,0,0]\n",
     "\n",
@@ -134,7 +135,8 @@
     "for x in range(0,3):\n",
     "    cos.append((docs + query) / docs * query)\n",
     "    \n",
-    "print(cos)"
+    "print(cos)\n",
+    "\n"
    ]
   },
   {
